--- a/src/html/Header.html
+++ b/src/html/Header.html
@@ -1,1 +1,25 @@
-<header>Header</header>
+<header>
+  <a class="logo-link" href="#"
+    ><img
+      class="logo-img"
+      src="@img/header/gitpod-logo.png"
+      alt="logo"
+      width="131"
+      height="40"
+  /></a>
+  <nav class="nav">
+    <ul class="nav__list">
+      <li class="nav__list-item"><a class="nav__link" href="#">Features</a></li>
+      <li class="nav__list-item"><a class="nav__link" href="#">Pricing</a></li>
+      <li class="nav__list-item"><a class="nav__link" href="#">Blog</a></li>
+      <li class="nav__list-item"><a class="nav__link" href="#">Docs</a></li>
+      <li class="nav__list-item"
+        ><a class="nav__link" href="#">Changelog</a></li
+      >
+      <li class="nav__list-item"
+        ><a class="nav__link" href="#">We're hiring</a></li
+      >
+    </ul>
+  </nav>
+  <button class="btn-login">Login</button>
+</header>
