--- a/src/html/head.html
+++ b/src/html/head.html
@@ -2,7 +2,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gitpod</title>
+  <title>Gitpod-Template</title>
   <link rel="icon" type="image/png" sizes="29x32" href="@img/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
