feat: add section Benefits

--- a/src/html/Main.html
+++ b/src/html/Main.html
@@ -1,1 +1,4 @@
-<main> @@include('sections/Banner.html', {}) </main>
+<main>
+  @@include('sections/Banner.html', {})
+  @@include('sections/Benefits.html', {})
+</main>
