--- a/src/html/sections/Banner.html
+++ b/src/html/sections/Banner.html
@@ -1,21 +1,46 @@
 <section id="banner-section" class="banner">
   <div class="banner__left">
-    <h1 class="banner__title">Always <br />
-      Ready to Code.</h1>
-    <p class="banner__text">Spin up fresh, automated dev environments <br> for each task, in the cloud, in
-      seconds</p>
+    <h1 class="banner__title"
+      >Always <br />
+      Ready to Code.</h1
+    >
+    <p class="banner__text"
+      >Spin up fresh, automated dev environments <br />
+      for each task, in the cloud, in seconds</p
+    >
     <div class="try-now__container">
       <a class="try-now__link" href="#">Try Now</a>
-      <p class="try-now__text">Open a workspace. <br> Start from any Git context.</p>
+      <p class="try-now__text"
+        >Open a workspace. <br />
+        Start from any Git context.</p
+      >
     </div>
     <div class="try-now__links">
-      <a class="try-now__link-social" href=""><img class="try-now__img" src="@img/Banner/fox.png" alt="logo"></a>
-      <a class="try-now__link-social" href="https://github.com/gitpod-io/gitpod" target="_blank"><img
-          class="try-now__img" src="@img/Banner/cat.png" alt="logo"></a>
-      <a class="try-now__link-social" href=""><img class="try-now__img" src="@img/Banner/bitbucket.png" alt="logo"></a>
+      <a
+        class="try-now__link-social"
+        href="https://www.gitpod.io/guides/create-self-serve-preview-environments-with-gitpod-and-gitlab"
+        target="_blank"
+        ><img class="try-now__img" src="@img/Banner/fox.png" alt="logo"
+      /></a>
+      <a
+        class="try-now__link-social"
+        href="https://github.com/gitpod-io/gitpod"
+        target="_blank"
+        ><img class="try-now__img" src="@img/Banner/cat.png" alt="logo"
+      /></a>
+      <a
+        class="try-now__link-social"
+        href="https://www.gitpod.io/blog/bitbucket"
+        target="_blank"
+        ><img class="try-now__img" src="@img/Banner/bitbucket.png" alt="logo"
+      /></a>
     </div>
   </div>
   <div class="banner__right">
-    <img class="banner__img" src="@img/Banner/comp.png" alt="room" width="630" />
+    <img
+      class="banner__img"
+      src="@img/Banner/comp.png"
+      alt="room"
+      width="630" />
   </div>
 </section>
