feat: add CI-CD section

--- a/src/html/Main.html
+++ b/src/html/Main.html
@@ -1,4 +1,5 @@
 <main>
   @@include('sections/Banner.html', {})
   @@include('sections/Benefits.html', {})
+  @@include('sections/CI-CD.html', {})
 </main>
