feat: add section 'Remote-firts'

--- a/src/html/Main.html
+++ b/src/html/Main.html
@@ -2,4 +2,7 @@
   @@include('sections/Banner.html', {})
   @@include('sections/Benefits.html', {})
   @@include('sections/CI-CD.html', {})
+  @@include('sections/Remote-first.html', {})
+  @@include('sections/Testimonials.html', {})
+  @@include('sections/Get-Started.html', {})
 </main>
