--- a/src/html/sections/Benefits.html
+++ b/src/html/sections/Benefits.html
@@ -1,8 +1,8 @@
 <section id="benefits-section" class="benefits">
   <p class="benefits__text benefits__text--main">Select project,</p>
-  <p class="benefits__text benefits__text--secondary">check dependencies, checkout branch, view readme.txt, install
-    tools, run build,
-    run test,
+  <p class="benefits__text benefits__text--secondary"
+    >check dependencies, checkout branch, view readme.txt, install tools, run
+    build, run test,
   </p>
   <p class="benefits__text benefits__text--main">start coding.</p>
 </section>
