--- a/src/html/sections/CI-CD.html
+++ b/src/html/sections/CI-CD.html
@@ -1,19 +1,28 @@
 <section id="CI-CD-section" class="ci-cd">
   <div class="ci-cd__left">
-    <h1 class="ci-cd__title">Think CI/CD for dev environments</h1>
-    <p class="ci-cd__text">We invented prebuilds so application code, configuration and infrastructure can all be stored
-      as
-      machine-executable
-      code in your git repositories and applied to dev environments automatically and continuously.</p>
+    <h2 class="ci-cd__title">Think CI/CD for dev environments</h2>
+    <p class="ci-cd__text"
+      >We invented prebuilds so application code, configuration and
+      infrastructure can all be stored as machine-executable code in your git
+      repositories and applied to dev environments automatically and
+      continuously.</p
+    >
     <div class="ci-cd__links">
-      <a class="ci-cd__link" href="https://www.gitpod.io/docs/configure/repositories/prebuilds" target="_blank">More on
-        prebuilds</a>
-      <a class="ci-cd__link"
+      <a
+        class="ci-cd__link"
+        href="https://www.gitpod.io/docs/configure/repositories/prebuilds"
+        target="_blank"
+        >More on prebuilds</a
+      >
+      <a
+        class="ci-cd__link"
         href="https://www.gitpod.io/guides/create-self-serve-preview-environments-with-gitpod-and-gitlab"
-        target="_blank">Documentation</a>
+        target="_blank"
+        >Documentation</a
+      >
     </div>
   </div>
   <div class="ci-cd__right">
-    <img src="@img/CI-CD/code.png" alt="programming code">
+    <img src="@img/CI-CD/code.png" alt="programming code" />
   </div>
 </section>
