feat: perpare next sections

--- a/src/html/sections/Testimonials.html
+++ b/src/html/sections/Testimonials.html
@@ -1,1 +1,4 @@
-<section id="testimonials-section" class="testimonials"> asdasd </section>
+<section id="testimonials-section" class="testimonials">
+  <h2 class="testimonials__title">Used by 400,000+ developers.</h2>
+  <div class="testimonials__cards"></div>
+</section>
