--- a/src/html/sections/Banner.html
+++ b/src/html/sections/Banner.html
@@ -9,7 +9,9 @@
       for each task, in the cloud, in seconds</p
     >
     <div class="try-now__container">
-      <a class="try-now__link" href="#">Try Now</a>
+      <a class="try-now__link" href="https://gitpod.io/login/" target="_blank"
+        >Try Now</a
+      >
       <p class="try-now__text"
         >Open a workspace. <br />
         Start from any Git context.</p
