--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  @@include('html/head.html', {"title":"Gitpod"})
-  <body>
-    <div class="app-container">
-      @@include('html/Header.html', {}) @@include('html/Main.html', {})
-      @@include('html/Footer.html', {})
-    </div>
-    <script type="module" src="./dist/js/app.min.js"></script>
-  </body>
+@@include('html/head.html', {"title":"Gitpod"})
+
+<body>
+  <div class="app-container">
+    @@include('html/Header.html', {})
+    @@include('html/Main.html', {})
+    @@include('html/Footer.html', {})
+  </div>
+  @@include('html/PopUp-coockies.html', {})
+  <script type="module" src="./dist/js/app.min.js"></script>
+</body>
+
 </html>
