fix: html errors and warnings (validator)

--- a/src/html/Footer.html
+++ b/src/html/Footer.html
@@ -34,7 +34,7 @@
       <li><a href="#">Privacy Policy</a></li>
     </ul>
   </div>
-  <small class="social-container">
+  <div class="social-container">
     <div class="copyright">
       <img src="@img/Footer/footer-logo.png" alt="logo" />
       <span>Copyright © 2021 Gitpod</span>
@@ -50,5 +50,5 @@
         ><img src="@img/Footer/cloud.png" alt="logo"
       /></a>
     </div>
-  </small>
+  </div>
 </footer>
