--- a/src/html/sections/Get-Started.html
+++ b/src/html/sections/Get-Started.html
@@ -36,7 +36,7 @@
               src="@img/Get-Started/node.png"
               alt="icon"
               width="27"
-              heigth="27" />
+              height="27" />
             <span>Node or TypeScript</span>
           </span>
           <a
@@ -52,7 +52,7 @@
               src="@img/Get-Started/python.png"
               alt="icon"
               width="27"
-              heigth="27" />
+              height="27" />
             <span>Python</span>
           </span>
           <a
@@ -68,7 +68,7 @@
               src="@img/Get-Started/go.png"
               alt="icon"
               width="27"
-              heigth="27" />
+              height="27" />
             <span>Go</span>
           </span>
           <a
@@ -84,7 +84,7 @@
               src="@img/Get-Started/rust.png"
               alt="icon"
               width="27"
-              heigth="27" />
+              height="27" />
             <span>Rust</span>
           </span>
           <a
@@ -100,13 +100,13 @@
               src="@img/Get-Started/java.png"
               alt="icon"
               width="27"
-              heigth="27" />
+              height="27" />
             <span>Java</span>
           </span>
           <a
             class="workspace__options-link"
             href="https://www.gitpod.io/docs/introduction/getting-started/quickstart/java"
-            target="_blank."
+            target="_blank"
             >Launch workspace</a
           >
         </li>
@@ -116,7 +116,7 @@
               src="@img/Get-Started/svetle.png"
               alt="icon"
               width="27"
-              heigth="27" />
+              height="27" />
             <span>Svelte</span>
           </span>
           <a
