--- a/src/html/sections/Benefits.html
+++ b/src/html/sections/Benefits.html
@@ -1,5 +1,5 @@
 <section id="benefits-section" class="benefits">
-  <p class="benefits__text benefits__text--main">Select project,</p>
+  <h2 class="benefits__text benefits__text--main">Select project,</h2>
   <p class="benefits__text benefits__text--secondary"
     >check dependencies, checkout branch, view readme.txt, install tools, run
     build, run test,
