fix: add star mark in footer section

--- a/src/html/Footer.html
+++ b/src/html/Footer.html
@@ -23,7 +23,7 @@
     <ul class="footer__list">
       <li>Company</li>
       <li><a href="#">About</a></li>
-      <li><a href="#">Careers</a></li>
+      <li class="star"><a href="#">Careers</a></li>
       <li><a href="#">Contact</a></li>
       <li><a href="#">Media Kit</a></li>
     </ul>
