--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </section>
 
   <section id="benefits-section" class="benefits">
-  <p class="benefits__text benefits__text--main">Select project,</p>
+  <h2 class="benefits__text benefits__text--main">Select project,</h2>
   <p class="benefits__text benefits__text--secondary"
     >check dependencies, checkout branch, view readme.txt, install tools, run
     build, run test,
@@ -234,7 +234,7 @@
               src="./dist/img/Get-Started/node.png"
               alt="icon"
               width="27"
-              heigth="27" />
+              height="27" />
             <span>Node or TypeScript</span>
           </span>
           <a
@@ -250,7 +250,7 @@
               src="./dist/img/Get-Started/python.png"
               alt="icon"
               width="27"
-              heigth="27" />
+              height="27" />
             <span>Python</span>
           </span>
           <a
@@ -266,7 +266,7 @@
               src="./dist/img/Get-Started/go.png"
               alt="icon"
               width="27"
-              heigth="27" />
+              height="27" />
             <span>Go</span>
           </span>
           <a
@@ -282,7 +282,7 @@
               src="./dist/img/Get-Started/rust.png"
               alt="icon"
               width="27"
-              heigth="27" />
+              height="27" />
             <span>Rust</span>
           </span>
           <a
@@ -298,13 +298,13 @@
               src="./dist/img/Get-Started/java.png"
               alt="icon"
               width="27"
-              heigth="27" />
+              height="27" />
             <span>Java</span>
           </span>
           <a
             class="workspace__options-link"
             href="https://www.gitpod.io/docs/introduction/getting-started/quickstart/java"
-            target="_blank."
+            target="_blank"
             >Launch workspace</a
           >
         </li>
@@ -314,7 +314,7 @@
               src="./dist/img/Get-Started/svetle.png"
               alt="icon"
               width="27"
-              heigth="27" />
+              height="27" />
             <span>Svelte</span>
           </span>
           <a
@@ -355,7 +355,7 @@
     <ul class="footer__list">
       <li>Company</li>
       <li><a href="#">About</a></li>
-      <li><a href="#">Careers</a></li>
+      <li class="star"><a href="#">Careers</a></li>
       <li><a href="#">Contact</a></li>
       <li><a href="#">Media Kit</a></li>
     </ul>
@@ -366,7 +366,7 @@
       <li><a href="#">Privacy Policy</a></li>
     </ul>
   </div>
-  <small class="social-container">
+  <div class="social-container">
     <div class="copyright">
       <img src="./dist/img/Footer/footer-logo.png" alt="logo" />
       <span>Copyright © 2021 Gitpod</span>
@@ -382,7 +382,7 @@
         ><img src="./dist/img/Footer/cloud.png" alt="logo"
       /></a>
     </div>
-  </small>
+  </div>
 </footer>
 
   </div>
