update: header adaptive in progress

--- a/src/html/Header.html
+++ b/src/html/Header.html
@@ -21,5 +21,11 @@
       >
     </ul>
   </nav>
-  <button class="btn-login">Login</button>
+  <div class="btn-group">
+    <button class="header-burger">
+      <span class="header-burger__line top"></span>
+      <span class="header-burger__line bottom"></span>
+    </button>
+    <button class="btn-login">Login</button>
+  </div>
 </header>
