--- a/index.html
+++ b/index.html
@@ -18,31 +18,27 @@
 <body>
   <div class="app-container">
     <header>
-  <a class="logo-link" href="#"
-    ><img
-      class="logo-img"
-      src="./dist/img/header/gitpod-logo.png"
-      alt="logo"
-      width="131"
-      height="40"
-  /></a>
+  <a class="logo-link" href="#">
+    <img class="logo-img" src="./dist/img/header/gitpod-logo.png" alt="logo" width="131" height="40" />
+  </a>
   <nav class="nav">
     <ul class="nav__list">
       <li class="nav__list-item"><a class="nav__link" href="#">Features</a></li>
       <li class="nav__list-item"><a class="nav__link" href="#">Pricing</a></li>
       <li class="nav__list-item"><a class="nav__link" href="#">Blog</a></li>
       <li class="nav__list-item"><a class="nav__link" href="#">Docs</a></li>
-      <li class="nav__list-item"
-        ><a class="nav__link" href="#">Changelog</a></li
-      >
-      <li class="nav__list-item"
-        ><a class="nav__link" href="#">We're hiring</a></li
-      >
+      <li class="nav__list-item"><a class="nav__link" href="#">Changelog</a></li>
+      <li class="nav__list-item"><a class="nav__link" href="#">We're hiring</a></li>
     </ul>
   </nav>
-  <button class="btn-login">Login</button>
+  <div class="btn-group">
+    <button class="btn-burger">
+      <span class="btn-burger__line top"></span>
+      <span class="btn-burger__line bottom"></span>
+    </button>
+    <button class="btn-login">Login</button>
+  </div>
 </header>
-
     <main>
   <section id="banner-section" class="banner">
   <div class="banner__left">
