--- a/src/html/sections/Banner.html
+++ b/src/html/sections/Banner.html
@@ -9,33 +9,38 @@
       for each task, in the cloud, in seconds</p
     >
     <div class="try-now__container">
-      <a class="try-now__link" href="https://gitpod.io/login/" target="_blank"
-        >Try Now</a
-      >
+      <div class="try-now__wrapprer">
+        <a class="try-now__link" href="https://gitpod.io/login/" target="_blank"
+          >Try Now</a
+        >
+        <div class="try-now__links">
+          <a
+            class="try-now__link-social"
+            href="https://docs.gitlab.com/ee/integration/gitpod.html"
+            target="_blank"
+            ><img class="try-now__img" src="@img/Banner/fox.png" alt="logo"
+          /></a>
+          <a
+            class="try-now__link-social"
+            href="https://github.com/gitpod-io/gitpod"
+            target="_blank"
+            ><img class="try-now__img" src="@img/Banner/cat.png" alt="logo"
+          /></a>
+          <a
+            class="try-now__link-social"
+            href="https://www.gitpod.io/blog/bitbucket"
+            target="_blank"
+            ><img
+              class="try-now__img"
+              src="@img/Banner/bitbucket.png"
+              alt="logo"
+          /></a>
+        </div>
+      </div>
       <p class="try-now__text"
         >Open a workspace. <br />
         Start from any Git context.</p
       >
-    </div>
-    <div class="try-now__links">
-      <a
-        class="try-now__link-social"
-        href="https://docs.gitlab.com/ee/integration/gitpod.html"
-        target="_blank"
-        ><img class="try-now__img" src="@img/Banner/fox.png" alt="logo"
-      /></a>
-      <a
-        class="try-now__link-social"
-        href="https://github.com/gitpod-io/gitpod"
-        target="_blank"
-        ><img class="try-now__img" src="@img/Banner/cat.png" alt="logo"
-      /></a>
-      <a
-        class="try-now__link-social"
-        href="https://www.gitpod.io/blog/bitbucket"
-        target="_blank"
-        ><img class="try-now__img" src="@img/Banner/bitbucket.png" alt="logo"
-      /></a>
     </div>
   </div>
   <div class="banner__right">
